# SystemC-TIHSC

./: .gitignore
Ex_2_3_2/: .cproject  .project
Ex_2_3_2/src/: Main.cpp  Master.cpp  Slave.cpp  Slave.h
Ex_2_3_3/: .project  streamingWave.vcd
Ex_2_3_3/src/: InAdapter.h  Master.cpp  Master.h  Top.h  defs.h
Ex_2_3_x/: .cproject  .project  streamingWave.vcd
Ex_2_3_x/src/: Main.cpp  Master.cpp  Master.h  Slave.cpp  Slave.h  Top.h
Examples/ADCInput/: .cproject  .project  ADCInputWave.vcd
Examples/AlgoBlock/: .cproject  .project  AlgoBlock.exe.stackdump  AlgoWave.vcd  in_data_arch.txt  in_data_func.txt  out_data_arch.txt  plotOutArch.m  plotOutDiff.m  plotOutFunc.m
Examples/Buttons/: .cproject  .project  DebounceWave.vcd
Examples/Gas_station/: .cproject  .project
Examples/LAVMU_Model/: .cproject  .project  gdb.exe.stackdump  out_data_func.txt  out_data_func_fix.txt  plotOutArch.asv  plotOutArch.m  plotOutDiff.m  plotOutFunc.m
Examples/LMSFilter/: .cproject  .project  LMSFilter.m  LMSNoiseSupressionSolution.m  SaveAsFixedInFile.m  plotOutputSignal.m
Examples/ModulesAndChannels/: main.cpp
Examples/SimpleFifo/: .cproject  .project  Fork.h  Mixer.h  Top.cpp  Top.h  main.cpp  mix_file.txt  output_double.txt
Examples/SmartPitchDetector/: .cproject  .project  SmartPitchDetector.exe.stackdump  mix_file.txt  output_acf.txt  output_double.txt  output_nsdf.txt  output_rtl.txt  output_sdf.txt  pitch_detector.m  resultArchVsFixed.m  resultArchVsFunc.m  resultArchitecture.asv  resultFixedPoint.m  resultGateVsArch.asv  resultGateVsArch.m  tau.txt
Examples/TemplateFir/: .cproject  .project  README.txt  mix_file.txt  output_double.txt  resultArchVsFunc.m  resultGateVsArch.m
Exercise_2_2/: .cproject  .project
Exercise_2_2/src/: ModuleConsumer.cpp  ModuleConsumer.h  ModuleDouble.cpp  ModuleDouble.h  ModuleProducer.cpp  ModuleProducer.h  ModuleSingle.cpp  ModuleSingle.h  Top231.h  main.cpp
MultiplierAdder/: .cproject  .project  WaveForm.vcd  mac.cpp  mac.h  main.cpp  monitor.h  stimulus.cpp  stimulus.h  top.h
TextonMapping/: .cproject  .project  prikpige.raw  streamingWave.vcd
TextonMappingBCAM/: .cproject  .project  streamingWave.vcd  textonmap_cpu.txt
libs/cpu_kode_done/: .directory  CMakeLists.txt  debugging.c  debugging.h  filtering.cu  filtering.h  k_means.cu  k_means.h  main.cpp
libs/cpu_kode_done/data/: .directory  prikpige.raw
libs/cpu_kode_done/utils/: .directory  CMakeLists.txt  core_defines.h  cuNDArray_elemwise.cu  cuNDArray_elemwise.h  cudaDeviceManager.cpp  cudaDeviceManager.h  vector_td_utilities.h
libs/libs/: .directory  CMakeLists.txt
libs/libs/common/: .directory  CMakeLists.txt
libs/libs/cuda/: .directory  CMakeLists.txt  cuda_utilities.c  cuda_utilities.h  float_util.hcu  float_util_device.hcu  uint_util.hcu
libs/libs/opengl/: .directory  CMakeLists.txt  glsl_shader.c  glsl_shader.h  image2d_opengl.c  image2d_opengl.h  opengl_utilities.c  opengl_utilities.h
(+362 files in other folders)
